# Babel

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
babel/accounts/: apps.py  views.py
babel/accounts/migrations/: 0001_initial.py
babel/moments/: admin.py  apps.py  urls.py  views.py
babel/moments/migrations/: 0001_initial.py
config/: settings.py  testing_settings.py  urls.py
powerhouse/accounts/: apps.py
powerhouse/accounts/migrations/: 0001_initial.py
powerhouse/moments/: admin.py  apps.py  models.py
powerhouse/moments/migrations/: 0001_initial.py  0002_alter_moment_timestamp_alter_moment_user_ids.py
requirements/: requirements-dev.txt  requirements.in  requirements.txt
templates/: base.html  home.html  navbar.html
templates/account/: login.html  signup.html
tests/: conftest.py
tests/accounts/: factories.py  test_HomePageView.py  test_models.py  test_views.py
tests/moments/: test_models.py
