[project]
requires-python = ">=3.11"

#[tool.coverage.report]
#fail_under = 100
#omit = [
#    "*/migrations/*",
#]
#show_missing = true
#skip_covered = true

[tool.pytest.ini_options]
addopts = "--nomigrations --disable-socket"
DJANGO_SETTINGS_MODULE = "config.testing_settings"
filterwarnings = [
    # Enable warnings as errors.
    "error",
]
# This warning is coming from dj-stripe 2.5.1 (Example)
#    ignore:.*The providing_args argument is deprecated\..*:DeprecationWarning
#    ignore:.*The providing_args argument is deprecated\..*:PendingDeprecationWarning
testpaths = [
    "powerhouse",
]
